# histclean

./: .gitignore  .last-claude-code-session  README.md  histclean-check.sh  histclean.code-workspace  histclean.py  histcompare.py  histmerge.py  history_files.py  pyproject.toml  sessions.yaml  zsh_lexer.py
.cursor/rules/: how-to-handle-every-user-request.mdc
src/hist/: __init__.py  histclean.py  histcompare.py  histmerge.py  history_files.py
